--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 5050"
+    "preview": "vite preview --port 5050",
+    "serve": "npm run build && vite preview"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
